2004-10-09  Elliott Hughes  <enh@acm.org>

	* src/error.cpp: bug #4059; deprecation diagnostics should be
	warnings, not errors.

2004-10-09  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp: bug #4058; shouldn't warn about deprecation in
	deprecated contexts.

2004-10-02  Elliott Hughes  <enh@acm.org>

	* NEWS: describe 1.22 and the bugs fixed between 1.21 and 1.22.

2004-09-26  Bu FeiMing  <phileas_bu@hotmail.com>

	* src/symbol.h (InsertDirectorySymbol): bug #495; subdirectories
	of a class directory should not be considered source directories.

2004-09-26  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp, src/error.cpp, src/error.h: bug #4046; warn when
	overriding a deprecated method.

2004-09-13  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp: bug #4042; constructors and default constructors
	of strictfp classes should be strictfp themselves (JLS2 8.1.1.3).

2004-09-13  Elliott Hughes  <enh@acm.org>

	* src/class.cpp: the release candidate Java 1.5's javac uses
	UTF-8 constants instead of Class constants for annotations.
	This patch lets us work with the rt.jar from 1.5-rc.

2004-08-20  Elliott Hughes  <enh@acm.org>

	* configure.ac, src/config.h.in, src/platform.h: bug #4018;
	include <errno.h> to fix FreeBSD 4.8 build problems.
	* Makefile.in, aclocal.m4, config.guess, config.sub,
	configure, depcomp, install-sh, doc/Makefile.in,
	src/Makefile.in: regenerated.

2004-08-18  Elliott Hughes  <enh@acm.org>

	* src/body.cpp, src/decl.cpp, src/semantic.h: bug #3947; ignore
	static variables if we're looking for shadows of a non-static
	variable, and vice versa.

2004-06-25  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp: a fix to my fix for bug #3986; still regresses 
	on the same Jacks tests, but is better practically. Now, as
	well as rejecting invalid 1.4 source, we can compile against
	the 1.5 rt.jar classes.

2004-06-22  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp: bug #3424; distinguish between invalid types